# HUST_twodoku

./: CMakeLists.txt  LICENSE  README.md
src/: cnfparser.cpp  cnfparser.h  head.h  heap.cpp  initsudoku.cpp  linkedlist.cpp  linkedlist.h  main.cpp  solver.cpp  solver.h
src/head/: cnfparser.h  head.h  heap.h  initsudoku.h  linkedlist.h  solver.h
